--- a/assets/sytle/estilo.css
+++ b/assets/sytle/estilo.css
@@ -14,21 +14,44 @@
 .cinza1{
     color: var(--cinza) !important;
 }
+
 .fonteTexto{
     font-family: var(--fonte-principal);
 }
+
 .titulo{
     font-size: 18px;
 }
+
 .cadastrar{
     background-color: var(--vinho);
     border: none;
     color: var(--base);
 }
+
 .cadastrar:hover{
     background-color: var(--vinho);
     color: var(--base);
+
 }.cadastrar:active{
     background-color: rgb(105, 3, 3) !important;
     color: var(--base) !important;
+}
+
+.banner1{
+    margin: 96px 0 96px 0;
+}
+
+.cor-vinho{
+    color: var(--vinho);
+}
+
+.tamFonte48{
+    font-size: 48px;
+}
+
+.txt-banner{
+    color: var(--cinza);
+    margin: 0 240px 0 240px;
+    line-height: 30px;
 }
