--- a/assets/sytle/estilo.css
+++ b/assets/sytle/estilo.css
@@ -78,4 +78,10 @@ body{
     color: var(--azul-escuro);
     font-size: 18px;
     line-height: 24px;
+    
+}
+
+.paragrafo-banner2{
+    font-size: 16px;
+    
 }
