--- a/assets/sytle/estilo.css
+++ b/assets/sytle/estilo.css
@@ -173,3 +173,9 @@
         margin: 0 60px 0 60px;
     }
 }
+
+@media (max-width:390px){
+    .cabecalho{
+        margin: 0 1.25rem 0 1.25rem;
+    }
+}
