--- a/assets/sytle/estilo.css
+++ b/assets/sytle/estilo.css
@@ -172,11 +172,24 @@
     .txt-banner{
         margin: 0 60px 0 60px;
     }
+    .banner4{
+        margin: 62px 30px ;
+    }
+    .cx-vagas{
+        margin: 0 10px;
+    }
 }
 
+@media (max-width:425px){
+    .banner4{
+        margin: 62px 30px ;
+    }
+    .cx-vagas{
+        margin: 0 10px;
+    }
+}
 @media (min-width:320px){
     .cabecalho{
         margin: 0 1.25rem 0 1.25rem;
     }
-    
 }
