--- a/assets/sytle/estilo.css
+++ b/assets/sytle/estilo.css
@@ -197,9 +197,23 @@
         margin: auto;
 
     }
+    .rodape-form{
+        display: flex;
+        flex-direction: column;
+        margin: 2rem;
+    }
+    .largura-email{
+        align-self: center;
+        width: 18rem;
+    }
+    .cadastrar{
+        align-self: center;
+        width: 100px;
+        margin: 1rem;
+    }
 }
 @media (min-width:320px){
     .cabecalho{
-        margin: 0 1.25rem 0 1.25rem;
+        margin: 0 2rem 0 2rem;
     }
 }
